// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an temporal widget edit component 1`] = `
<div>
  <div
    class="inline field temporal-field-wrapper"
  >
    <div
      class="ui grid"
    >
      <div
        class="stretched row"
      >
        <div
          class="twelve wide column"
        >
          <div
            class="ui grid"
          >
            <div
              class="stretched row"
            >
              <div
                class="four wide column"
              >
                <div
                  class="wrapper"
                >
                  <label
                    for="select-listingblock-template"
                  >
                    Temporal coverage
                  </label>
                </div>
              </div>
              <div
                class="eight wide column"
                style="flex-direction: unset;"
              >
                <div
                  class="react-select-container css-2b097c-container"
                  id="temporal"
                >
                  <div
                    class="react-select__control css-1ard45z-control"
                  >
                    <div
                      class="react-select__value-container react-select__value-container--is-multi react-select__value-container--has-value css-1a9cv00-ValueContainer"
                    >
                      <div
                        class="css-13jmfyo-multiValue react-select__multi-value"
                      >
                        <div
                          class="css-10ku62j react-select__multi-value__label"
                        >
                          1900
                        </div>
                        <div
                          class="css-5dgs50 react-select__multi-value__remove"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="14"
                            viewBox="0 0 20 20"
                            width="14"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="css-b8ldur-Input"
                      >
                        <div
                          class="react-select__input"
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="react-select-2-input"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <div
                        aria-hidden="true"
                        class="react-select__indicator react-select__clear-indicator css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                          />
                        </svg>
                      </div>
                      <span
                        class="react-select__indicator-separator css-6fp5c8-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="react-select__indicator react-select__dropdown-indicator css-7hdh9a-DropdownIndicator"
                      >
                        <svg
                          class="icon"
                          style="height: 24px; width: auto; fill: #007bc1;"
                          viewBox=""
                          xmlns=""
                        />
                      </div>
                    </div>
                  </div>
                  <div>
                    <input
                      name="select-temporal-coverage"
                      type="hidden"
                      value="1900"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders an temporal widget edit component even when temporal is null 1`] = `
<div>
  <div
    class="inline field temporal-field-wrapper"
  >
    <div
      class="ui grid"
    >
      <div
        class="stretched row"
      >
        <div
          class="twelve wide column"
        >
          <div
            class="ui grid"
          >
            <div
              class="stretched row"
            >
              <div
                class="four wide column"
              >
                <div
                  class="wrapper"
                >
                  <label
                    for="select-listingblock-template"
                  >
                    Temporal coverage
                  </label>
                </div>
              </div>
              <div
                class="eight wide column"
                style="flex-direction: unset;"
              >
                <div
                  class="react-select-container css-2b097c-container"
                  id="temporal"
                >
                  <div
                    class="react-select__control css-1ard45z-control"
                  >
                    <div
                      class="react-select__value-container react-select__value-container--is-multi css-1a9cv00-ValueContainer"
                    >
                      <div
                        class="react-select__placeholder css-1wa3eu0-placeholder"
                      >
                        Select...
                      </div>
                      <div
                        class="css-b8ldur-Input"
                      >
                        <div
                          class="react-select__input"
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="react-select-2-input"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class="react-select__indicator-separator css-6fp5c8-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="react-select__indicator react-select__dropdown-indicator css-7hdh9a-DropdownIndicator"
                      >
                        <svg
                          class="icon"
                          style="height: 24px; width: auto; fill: #007bc1;"
                          viewBox=""
                          xmlns=""
                        />
                      </div>
                    </div>
                  </div>
                  <div>
                    <input
                      name="select-temporal-coverage"
                      type="hidden"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders an temporal widget edit component when temporal is an empty list 1`] = `
<div>
  <div
    class="inline field temporal-field-wrapper"
  >
    <div
      class="ui grid"
    >
      <div
        class="stretched row"
      >
        <div
          class="twelve wide column"
        >
          <div
            class="ui grid"
          >
            <div
              class="stretched row"
            >
              <div
                class="four wide column"
              >
                <div
                  class="wrapper"
                >
                  <label
                    for="select-listingblock-template"
                  >
                    Temporal coverage
                  </label>
                </div>
              </div>
              <div
                class="eight wide column"
                style="flex-direction: unset;"
              >
                <div
                  class="react-select-container css-2b097c-container"
                  id="temporal"
                >
                  <div
                    class="react-select__control css-1ard45z-control"
                  >
                    <div
                      class="react-select__value-container react-select__value-container--is-multi css-1a9cv00-ValueContainer"
                    >
                      <div
                        class="react-select__placeholder css-1wa3eu0-placeholder"
                      >
                        Select...
                      </div>
                      <div
                        class="css-b8ldur-Input"
                      >
                        <div
                          class="react-select__input"
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="react-select-2-input"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class="react-select__indicator-separator css-6fp5c8-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="react-select__indicator react-select__dropdown-indicator css-7hdh9a-DropdownIndicator"
                      >
                        <svg
                          class="icon"
                          style="height: 24px; width: auto; fill: #007bc1;"
                          viewBox=""
                          xmlns=""
                        />
                      </div>
                    </div>
                  </div>
                  <div>
                    <input
                      name="select-temporal-coverage"
                      type="hidden"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders an temporal widget edit component with existing temporal ranges and single values 1`] = `
<div>
  <div
    class="inline field temporal-field-wrapper"
  >
    <div
      class="ui grid"
    >
      <div
        class="stretched row"
      >
        <div
          class="twelve wide column"
        >
          <div
            class="ui grid"
          >
            <div
              class="stretched row"
            >
              <div
                class="four wide column"
              >
                <div
                  class="wrapper"
                >
                  <label
                    for="select-listingblock-template"
                  >
                    Temporal coverage
                  </label>
                </div>
              </div>
              <div
                class="eight wide column"
                style="flex-direction: unset;"
              >
                <div
                  class="react-select-container css-2b097c-container"
                  id="temporal"
                >
                  <div
                    class="react-select__control css-1ard45z-control"
                  >
                    <div
                      class="react-select__value-container react-select__value-container--is-multi react-select__value-container--has-value css-1a9cv00-ValueContainer"
                    >
                      <div
                        class="css-13jmfyo-multiValue react-select__multi-value"
                      >
                        <div
                          class="css-10ku62j react-select__multi-value__label"
                        >
                          1890
                        </div>
                        <div
                          class="css-5dgs50 react-select__multi-value__remove"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="14"
                            viewBox="0 0 20 20"
                            width="14"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="css-13jmfyo-multiValue react-select__multi-value"
                      >
                        <div
                          class="css-10ku62j react-select__multi-value__label"
                        >
                          1900-1905
                        </div>
                        <div
                          class="css-5dgs50 react-select__multi-value__remove"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="14"
                            viewBox="0 0 20 20"
                            width="14"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="css-13jmfyo-multiValue react-select__multi-value"
                      >
                        <div
                          class="css-10ku62j react-select__multi-value__label"
                        >
                          1915
                        </div>
                        <div
                          class="css-5dgs50 react-select__multi-value__remove"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="14"
                            viewBox="0 0 20 20"
                            width="14"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="css-b8ldur-Input"
                      >
                        <div
                          class="react-select__input"
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="react-select-7-input"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <div
                        aria-hidden="true"
                        class="react-select__indicator react-select__clear-indicator css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                          />
                        </svg>
                      </div>
                      <span
                        class="react-select__indicator-separator css-6fp5c8-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="react-select__indicator react-select__dropdown-indicator css-7hdh9a-DropdownIndicator"
                      >
                        <svg
                          class="icon"
                          style="height: 24px; width: auto; fill: #007bc1;"
                          viewBox=""
                          xmlns=""
                        />
                      </div>
                    </div>
                  </div>
                  <div>
                    <input
                      name="select-temporal-coverage"
                      type="hidden"
                      value="1890"
                    />
                    <input
                      name="select-temporal-coverage"
                      type="hidden"
                      value="1900-1905"
                    />
                    <input
                      name="select-temporal-coverage"
                      type="hidden"
                      value="1915"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders an temporal widget edit component with multiple ranges and single values 1`] = `
<div>
  <div
    class="inline field temporal-field-wrapper"
  >
    <div
      class="ui grid"
    >
      <div
        class="stretched row"
      >
        <div
          class="twelve wide column"
        >
          <div
            class="ui grid"
          >
            <div
              class="stretched row"
            >
              <div
                class="four wide column"
              >
                <div
                  class="wrapper"
                >
                  <label
                    for="select-listingblock-template"
                  >
                    Temporal coverage
                  </label>
                </div>
              </div>
              <div
                class="eight wide column"
                style="flex-direction: unset;"
              >
                <div
                  class="react-select-container css-2b097c-container"
                  id="temporal"
                >
                  <div
                    class="react-select__control css-1ard45z-control"
                  >
                    <div
                      class="react-select__value-container react-select__value-container--is-multi react-select__value-container--has-value css-1a9cv00-ValueContainer"
                    >
                      <div
                        class="css-13jmfyo-multiValue react-select__multi-value"
                      >
                        <div
                          class="css-10ku62j react-select__multi-value__label"
                        >
                          1900-1901
                        </div>
                        <div
                          class="css-5dgs50 react-select__multi-value__remove"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="14"
                            viewBox="0 0 20 20"
                            width="14"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="css-13jmfyo-multiValue react-select__multi-value"
                      >
                        <div
                          class="css-10ku62j react-select__multi-value__label"
                        >
                          1905
                        </div>
                        <div
                          class="css-5dgs50 react-select__multi-value__remove"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="14"
                            viewBox="0 0 20 20"
                            width="14"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="css-13jmfyo-multiValue react-select__multi-value"
                      >
                        <div
                          class="css-10ku62j react-select__multi-value__label"
                        >
                          1907-1908
                        </div>
                        <div
                          class="css-5dgs50 react-select__multi-value__remove"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="14"
                            viewBox="0 0 20 20"
                            width="14"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="css-b8ldur-Input"
                      >
                        <div
                          class="react-select__input"
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="react-select-6-input"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <div
                        aria-hidden="true"
                        class="react-select__indicator react-select__clear-indicator css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                          />
                        </svg>
                      </div>
                      <span
                        class="react-select__indicator-separator css-6fp5c8-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="react-select__indicator react-select__dropdown-indicator css-7hdh9a-DropdownIndicator"
                      >
                        <svg
                          class="icon"
                          style="height: 24px; width: auto; fill: #007bc1;"
                          viewBox=""
                          xmlns=""
                        />
                      </div>
                    </div>
                  </div>
                  <div>
                    <input
                      name="select-temporal-coverage"
                      type="hidden"
                      value="1900-1901"
                    />
                    <input
                      name="select-temporal-coverage"
                      type="hidden"
                      value="1905"
                    />
                    <input
                      name="select-temporal-coverage"
                      type="hidden"
                      value="1907-1908"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders an temporal widget edit component with ranges 1`] = `
<div>
  <div
    class="inline field temporal-field-wrapper"
  >
    <div
      class="ui grid"
    >
      <div
        class="stretched row"
      >
        <div
          class="twelve wide column"
        >
          <div
            class="ui grid"
          >
            <div
              class="stretched row"
            >
              <div
                class="four wide column"
              >
                <div
                  class="wrapper"
                >
                  <label
                    for="select-listingblock-template"
                  >
                    Temporal coverage
                  </label>
                </div>
              </div>
              <div
                class="eight wide column"
                style="flex-direction: unset;"
              >
                <div
                  class="react-select-container css-2b097c-container"
                  id="temporal"
                >
                  <div
                    class="react-select__control css-1ard45z-control"
                  >
                    <div
                      class="react-select__value-container react-select__value-container--is-multi react-select__value-container--has-value css-1a9cv00-ValueContainer"
                    >
                      <div
                        class="css-13jmfyo-multiValue react-select__multi-value"
                      >
                        <div
                          class="css-10ku62j react-select__multi-value__label"
                        >
                          1900-1901
                        </div>
                        <div
                          class="css-5dgs50 react-select__multi-value__remove"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="14"
                            viewBox="0 0 20 20"
                            width="14"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="css-b8ldur-Input"
                      >
                        <div
                          class="react-select__input"
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="react-select-3-input"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <div
                        aria-hidden="true"
                        class="react-select__indicator react-select__clear-indicator css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                          />
                        </svg>
                      </div>
                      <span
                        class="react-select__indicator-separator css-6fp5c8-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="react-select__indicator react-select__dropdown-indicator css-7hdh9a-DropdownIndicator"
                      >
                        <svg
                          class="icon"
                          style="height: 24px; width: auto; fill: #007bc1;"
                          viewBox=""
                          xmlns=""
                        />
                      </div>
                    </div>
                  </div>
                  <div>
                    <input
                      name="select-temporal-coverage"
                      type="hidden"
                      value="1900-1901"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders an temporal widget edit component with ranges and single values 1`] = `
<div>
  <div
    class="inline field temporal-field-wrapper"
  >
    <div
      class="ui grid"
    >
      <div
        class="stretched row"
      >
        <div
          class="twelve wide column"
        >
          <div
            class="ui grid"
          >
            <div
              class="stretched row"
            >
              <div
                class="four wide column"
              >
                <div
                  class="wrapper"
                >
                  <label
                    for="select-listingblock-template"
                  >
                    Temporal coverage
                  </label>
                </div>
              </div>
              <div
                class="eight wide column"
                style="flex-direction: unset;"
              >
                <div
                  class="react-select-container css-2b097c-container"
                  id="temporal"
                >
                  <div
                    class="react-select__control css-1ard45z-control"
                  >
                    <div
                      class="react-select__value-container react-select__value-container--is-multi react-select__value-container--has-value css-1a9cv00-ValueContainer"
                    >
                      <div
                        class="css-13jmfyo-multiValue react-select__multi-value"
                      >
                        <div
                          class="css-10ku62j react-select__multi-value__label"
                        >
                          1900-1901
                        </div>
                        <div
                          class="css-5dgs50 react-select__multi-value__remove"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="14"
                            viewBox="0 0 20 20"
                            width="14"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="css-13jmfyo-multiValue react-select__multi-value"
                      >
                        <div
                          class="css-10ku62j react-select__multi-value__label"
                        >
                          1905
                        </div>
                        <div
                          class="css-5dgs50 react-select__multi-value__remove"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="14"
                            viewBox="0 0 20 20"
                            width="14"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="css-13jmfyo-multiValue react-select__multi-value"
                      >
                        <div
                          class="css-10ku62j react-select__multi-value__label"
                        >
                          1907
                        </div>
                        <div
                          class="css-5dgs50 react-select__multi-value__remove"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="14"
                            viewBox="0 0 20 20"
                            width="14"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="css-b8ldur-Input"
                      >
                        <div
                          class="react-select__input"
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="react-select-4-input"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <div
                        aria-hidden="true"
                        class="react-select__indicator react-select__clear-indicator css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                          />
                        </svg>
                      </div>
                      <span
                        class="react-select__indicator-separator css-6fp5c8-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="react-select__indicator react-select__dropdown-indicator css-7hdh9a-DropdownIndicator"
                      >
                        <svg
                          class="icon"
                          style="height: 24px; width: auto; fill: #007bc1;"
                          viewBox=""
                          xmlns=""
                        />
                      </div>
                    </div>
                  </div>
                  <div>
                    <input
                      name="select-temporal-coverage"
                      type="hidden"
                      value="1900-1901"
                    />
                    <input
                      name="select-temporal-coverage"
                      type="hidden"
                      value="1905"
                    />
                    <input
                      name="select-temporal-coverage"
                      type="hidden"
                      value="1907"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders an temporal widget edit component with ranges and single values 2`] = `
<div>
  <div
    class="inline field temporal-field-wrapper"
  >
    <div
      class="ui grid"
    >
      <div
        class="stretched row"
      >
        <div
          class="twelve wide column"
        >
          <div
            class="ui grid"
          >
            <div
              class="stretched row"
            >
              <div
                class="four wide column"
              >
                <div
                  class="wrapper"
                >
                  <label
                    for="select-listingblock-template"
                  >
                    Temporal coverage
                  </label>
                </div>
              </div>
              <div
                class="eight wide column"
                style="flex-direction: unset;"
              >
                <div
                  class="react-select-container css-2b097c-container"
                  id="temporal"
                >
                  <div
                    class="react-select__control css-1ard45z-control"
                  >
                    <div
                      class="react-select__value-container react-select__value-container--is-multi react-select__value-container--has-value css-1a9cv00-ValueContainer"
                    >
                      <div
                        class="css-13jmfyo-multiValue react-select__multi-value"
                      >
                        <div
                          class="css-10ku62j react-select__multi-value__label"
                        >
                          1900-1901
                        </div>
                        <div
                          class="css-5dgs50 react-select__multi-value__remove"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="14"
                            viewBox="0 0 20 20"
                            width="14"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="css-13jmfyo-multiValue react-select__multi-value"
                      >
                        <div
                          class="css-10ku62j react-select__multi-value__label"
                        >
                          1905
                        </div>
                        <div
                          class="css-5dgs50 react-select__multi-value__remove"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="14"
                            viewBox="0 0 20 20"
                            width="14"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="css-13jmfyo-multiValue react-select__multi-value"
                      >
                        <div
                          class="css-10ku62j react-select__multi-value__label"
                        >
                          1907
                        </div>
                        <div
                          class="css-5dgs50 react-select__multi-value__remove"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="14"
                            viewBox="0 0 20 20"
                            width="14"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="css-b8ldur-Input"
                      >
                        <div
                          class="react-select__input"
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="react-select-5-input"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <div
                        aria-hidden="true"
                        class="react-select__indicator react-select__clear-indicator css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                          />
                        </svg>
                      </div>
                      <span
                        class="react-select__indicator-separator css-6fp5c8-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="react-select__indicator react-select__dropdown-indicator css-7hdh9a-DropdownIndicator"
                      >
                        <svg
                          class="icon"
                          style="height: 24px; width: auto; fill: #007bc1;"
                          viewBox=""
                          xmlns=""
                        />
                      </div>
                    </div>
                  </div>
                  <div>
                    <input
                      name="select-temporal-coverage"
                      type="hidden"
                      value="1900-1901"
                    />
                    <input
                      name="select-temporal-coverage"
                      type="hidden"
                      value="1905"
                    />
                    <input
                      name="select-temporal-coverage"
                      type="hidden"
                      value="1907"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
